dog -> slide, fix build for assets

--- a/www/index.html
+++ b/www/index.html
@@ -24,12 +24,12 @@
   </nav>
 
   <main class="content">
-    <div class="page-ish" id="dog">
-      <img src="https://images.unsplash.com/photo-1473628121395-7fe8cafb5639?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=cae6fefaa5bec3cbf16132a217eab00c"
+    <div class="page-ish" id="intro">
+      <img src="assets/dash_intro_slide.png"
         alt="" />
     </div>
 
-    <!--   <div id="dog"></div> -->
+    <!--   <div id="intro"></div> -->
 
     <iframe class="page-ish" id="dashboard" width="100%" height="100%" src="https://app.powerbi.com/view?r=eyJrIjoiMjJkZDhkZTMtMDQ0Yy00MGVjLTgzZTEtYjExMzliYzFlZTJlIiwidCI6ImVhNWFmODRkLTE1YWYtNDJiOC04ZmJjLTRkMWE4ZDViMmJkOCIsImMiOjh9"
       frameborder="0" allowFullScreen="false"></iframe>
