--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
   <main class="content">
     <div class="page-ish" id="intro">
-      <img src="assets/dash_intro_slide.png"
+      <img src="assets/dash_introslide.png"
         alt="" />
     </div>
 
